# walocoin

./: CONTRIBUTING.md  COPYING  INSTALL.md  Instalacion-billetera.md  Instalar-nodo.md  LICENSE  Makefile  Makefile.am  Makefile.in  Minero.md  README.md  config.status  configure  configure.ac  configure.lineno  libbitcoinconsensus.pc  libtool
.travis/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
autom4te.cache/: output.1  requests  traces.0  traces.1
build_msvc/: README.md
config/: walocoin.conf
contrib/: README.md  gitian-build.py  install_db4.sh
depends/: README.md  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-walocoin.md  release-process.md  tor.md  walocoin-conf.md  zmq.md
doc/man/: Makefile  Makefile.am  Makefile.in  walocoin-cli.1  walocoin-qt.1  walocoin-tx.1  walocoin-wallet.1  walocoind.1
share/: kavacon.txt  setup.nsi  setup.nsi.in
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  (+9 more)
(+484 files in other folders)
